# tapeloop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
bootloader/: Cargo.toml
bootloader/src/: ipod.rs
drivers/: Cargo.toml
drivers/src/: lcd-16bit.rs  led.rs
firmware/: Cargo.toml
firmware/src/: lib.rs
lib/: Cargo.toml
tools/: Cargo.toml
utils/: Cargo.toml
